# nerdvana

2022-11-16-graphs/: bfs.cpp
2022-11-23-graphs/: bcc-naive.cpp  bcc-sorter.php  bfs.cpp  scc-kosaraju.cpp  scc-naive.cpp  scc-tarjan.cpp  topsort-bfs.cpp  topsort-dfs.cpp
2023-06-12-robocode/: README.md
2024-06-12-whist/: README.md  game-log.md  protocol.md
2024-07-blokus-client/: .gitignore  CMakeLists.txt  driver.sh
2024-07-blokus-client/src/: Board.cpp  Board.h  Command.cpp  Command.h  Game.cpp  Game.h  MoveList.cpp  MoveList.h  Piece.cpp  Piece.h  Response.cpp  Response.h  StrUtil.cpp  StrUtil.h  globals.cpp  globals.h  main.cpp
balanced-ds/: basic.cpp  benchmark-augmented.cpp  benchmark-basic.cpp  benchmark.cpp  indexed.cpp  timekeeping.h  treap-basic-dyn-alloc.cpp
balanced-ds/pbds/: pbds.h
bit-hacks/: compact-2bit-32-bit.cpp  compact-2bit.cpp  compact-bool-32-bit.cpp  compact-bool.cpp  log-base-2.cpp  popcount.cpp
combinatorics/: combination-rank.cpp  permutation-power.cpp  permutation-rank.cpp
computational-geometry/: comp-geom.cpp  graham-scan.cpp
graphs/: dfs.cpp  gen.cpp
number-theory/: extended-euclid.cpp  fermat-test.cpp  inverse-benchmark.cpp  mobius-function-1.cpp  mobius-function-2.cpp  mobius-function-3.cpp  sum-geometric-progression.cpp
query-update/: test.sh
skip-lists/: basic-array.h  basic-buf.h  basic-vector.h  basic.cpp  benchmark-basic.cpp  benchmark-indexed.cpp  indexed-array.h  indexed-vector.h  indexed.cpp  rand-025.h  rand-0375.h  rand-05.h  rand-naive.h  timekeeping.h
tools/: codeforces-scraper.php
trees/: gen.cpp
(+439 files in other folders)
